iac_benchmark/multi_root_templates/autoiac-project__iac-eval/aws_vpc_233.tf
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
  assign_generated_ipv6_cidr_block = true
}
